verified param cnt, rm intro notebooks

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -261,7 +261,7 @@
     "\n",
     "The following contents will be covered during the Bootcamp :\n",
     "\n",
-    "- [**Introduction and outlines of Day 2**](./jupyter_notebook/Day2_0_intro.ipynb)\n",
+    "- **Outlines of Day 2**\n",
     "    Megatron 101 in half a day \n",
     "    - [Estimate hours/days needed to execute one end-to-end run per Megatron configuration](./jupyter_notebook/Day2-1_EstimateComputeDaysNeeded.ipynb)\n",
     "    - [Understanding the core of Megatron - mpu ](./jupyter_notebook/Day2-2_MegatronFundementals.ipynb)\n",
@@ -270,7 +270,7 @@
     "    - [Megatron runs vs config](./jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb)\n",
     "    - [challenge - the best profiler](./jupyter_notebook/Day2-5_Observe_GPT_runs_vs_performance.ipynb#TheChallenge)\n",
     "\n",
-    "- [**Day 3 outlines **](./jupyter_notebook/Day3-0_overview.ipynb)\n",
+    "- **Outlines of Day 3**\n",
     "    Getting started on training your own Megatron GPT models !\n",
     "    - [Fetch and extract Swedish data](./jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-1_acquiring_data.ipynb)\n",
     "    - [Find sentence boundary and deduplicate your data](./jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-2_SentenceBoundary_and_Deduplicate.ipynb)\n",
